traces/bug_43.txt
/home/runner/work/42sh-infer/42sh-infer/src/builtins/which.c:36: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/builtins/which.c:36:5: Write of unused value
34.   {
35.       char *str;
36.       int ret = 1;
          ^
37.   
38.       ret = 1;
